objects/OrderPlan__c.object
<CustomObject>
    <description>削除対象Object</description>
    <fields>
        <fullName>Biko_Att__c</fullName>
        <label>備考(ATT)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biko_Shodan__c</fullName>
        <label>備考（商談）</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BushoName__c</fullName>
        <label>部署名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>クローズ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>国</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>国コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateFormula__c</fullName>
        <formula>Datevalue(CreatedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>登録日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrencyName__c</fullName>
        <label>通貨</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentSituation__c</fullName>
        <label>納入後の現状</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerAccountAddress__c</fullName>
        <formula>CustomerAccount__r.Address__c</formula>
        <label>顧客住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SalesPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <label>顧客コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecisionModel__c</fullName>
        <label>競合・決定機種</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecisionName__c</fullName>
        <label>競合・決定先名</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecisionPrice__c</fullName>
        <label>決定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaCode__c</fullName>
        <label>営業担当者コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaName__c</fullName>
        <label>営業担当者名称</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserName__c</fullName>
        <label>エンドユーザ名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupTopKakunin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>グループ長確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HenkoRiyu__c</fullName>
        <label>変更理由</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JishaPrice__c</fullName>
        <label>自社金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JuchuKakudoName__c</fullName>
        <label>受注確度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuKakudo__c</fullName>
        <label>受注確度ステータス</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受注リンク</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JuchuYoteiNendo__c</fullName>
        <label>受注予定年度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuYoteiTsuki__c</fullName>
        <label>受注予定月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KakkoKubun__c</fullName>
        <label>カッコ区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KigyoTani__c</fullName>
        <label>企業単位</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kokunai_Kaigai__c</fullName>
        <label>国内/海外</label>
        <picklist>
            <picklistValues>
                <fullName>国内</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KyakusakiKubunName__c</fullName>
        <label>客先区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KyakusakiKubun__c</fullName>
        <label>客先区分コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MakerName__c</fullName>
        <label>競合・決定メーカー名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maker__c</fullName>
        <label>競合・決定メーカー</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUpdated__c</fullName>
        <label>新規・更新区分</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderPlanNo_sync__c</fullName>
        <externalId>true</externalId>
        <label>受注予定No_連携用</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuoteNo_BranchNo__c</fullName>
        <formula>Quote__r.QuoteNo_BranchNo_Sync__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>見積No/枝番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見積No</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipName>OrderPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <label>地域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>地域コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderCode__c</fullName>
        <formula>SalesOrder__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売オーダ番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipName>OrderPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPLNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業パイプラインNo</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipName>SalesPLNocpTZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_sts__c</fullName>
        <description>商談ステータス</description>
        <label>商談ステータス(受注予定)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentName__c</fullName>
        <label>セグメント名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>セグメントコード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>系列</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingYearMonth__c</fullName>
        <label>設置年月</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShitenchoShonin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>支店長承認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShodanStatusName__c</fullName>
        <label>商談状況詳細</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShodanStatus__c</fullName>
        <label>商談状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinCode__c</fullName>
        <label>商品コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinName__c</fullName>
        <label>商品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShoshaKeiyuKubun__c</fullName>
        <label>商社経由区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShukkaYokyuTsuki__c</fullName>
        <label>出荷要求月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaiTorihikiNebikigaku__c</fullName>
        <label>対取引値引額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TashaPrice__c</fullName>
        <label>他社金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalKakudoName__c</fullName>
        <label>総合確度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalKakudo__c</fullName>
        <label>総合確度ステータス</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>総額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UodatedDateFormula__c</fullName>
        <formula>Datevalue(UodatedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>更新日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UodatedDate__c</fullName>
        <label>更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UriageYoteiTsuki__c</fullName>
        <label>売上予定月</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossAddedDateFormula__c</fullName>
        <formula>Datevalue(WinLossAddedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勝敗因登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WinLossAddedDate__c</fullName>
        <label>勝敗因登録日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WinLossReason1__c</fullName>
        <label>勝敗因理由1</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossReason2__c</fullName>
        <label>勝敗因理由2</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossReason3__c</fullName>
        <label>勝敗因理由3</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossReasonName1__c</fullName>
        <label>勝敗因理由1名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossReasonName2__c</fullName>
        <label>勝敗因理由2名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossReasonName3__c</fullName>
        <label>勝敗因理由3名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YosanKakudoName__c</fullName>
        <label>予算確度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YosanKakudo__c</fullName>
        <label>予算確度ステータス</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YosanKubunName__c</fullName>
        <label>予算区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YosanKubun__c</fullName>
        <label>予算区分コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YotoKubunName__c</fullName>
        <label>用途区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YotoKubun__c</fullName>
        <label>用途区分コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>×受注予定</label>
    <listViews>
        <fullName>AI2T_MS</fullName>
        <booleanFilter>1 AND ( 2 or 3 ) and 4 and 5 AND ( 6 or 7 or 8 or 9 )</booleanFilter>
        <columns>NAME</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudo__c</columns>
        <columns>JuchuKakudo__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>PR段階</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201603</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201504</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01059625</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01070530</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01070050</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01063568</value>
        </filters>
        <label>☆受注予定☆東京AI2T_MS</label>
    </listViews>
    <listViews>
        <fullName>AI_MS</fullName>
        <booleanFilter>1 AND ( 2 or 3 ) and 4 and 5 AND ( 6 or 7 or 8 or 9 or 10 )</booleanFilter>
        <columns>NAME</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudo__c</columns>
        <columns>JuchuKakudo__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>PR段階</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201501</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201509</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>27056260</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01061506</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>27062031</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01069370</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01067369</value>
        </filters>
        <label>◇受注予定◇大阪AI_MS</label>
    </listViews>
    <listViews>
        <fullName>AI_NM</fullName>
        <booleanFilter>1 AND ( 2 or 3 ) and 4 and 5 AND ( 6 or 7 or 8 or 9 or 10 )</booleanFilter>
        <columns>NAME</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudo__c</columns>
        <columns>JuchuKakudo__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>PR段階</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201501</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201509</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>27056260</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01061506</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>27062031</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01069370</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01067369</value>
        </filters>
        <label>◇受注予定◇大阪AI_NM</label>
    </listViews>
    <listViews>
        <fullName>Add_tdslz309</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>SalesOrder__c</columns>
        <columns>ShodanStatus__c</columns>
        <columns>ShodanStatusName__c</columns>
        <columns>Series__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>ShohinName__c</columns>
        <columns>YosanKakudoName__c</columns>
        <columns>JuchuKakudoName__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UodatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/10/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/10/2015 12:00 AM</value>
        </filters>
        <label>追加取込分</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>FY2014_AI</fullName>
        <booleanFilter>1 AND ( 2 or 3 ) and 4 and 5 AND 6 AND 7 and 8</booleanFilter>
        <columns>SalesOrder__c</columns>
        <columns>Series__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>ShohinName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TashaPrice__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>UriageYoteiTsuki__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>015</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>contains</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201404</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201503</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>27062031</value>
        </filters>
        <label>FY2014受注（福嶋主務@大阪AI）</label>
    </listViews>
    <listViews>
        <fullName>NM</fullName>
        <booleanFilter>1 AND ( 2 or 3 ) and 4 and 5 AND ( 6 or 7 or 8 or 9 )</booleanFilter>
        <columns>NAME</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudo__c</columns>
        <columns>JuchuKakudo__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>PR段階</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201603</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201504</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01059625</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01070530</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01070050</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01063568</value>
        </filters>
        <label>☆受注予定☆東京AI2T_NM</label>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>SalesOrder__c</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinName__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>JishaPrice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>勝ち</value>
        </filters>
        <label>商談状況=勝ち</label>
    </listViews>
    <listViews>
        <fullName>View001</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShodanStatus__c</columns>
        <columns>ShohinName__c</columns>
        <columns>CurrencyName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>JuchuKakudoName__c</columns>
        <columns>Series__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
        </filters>
        <filters>
            <field>CustomerAccount__c</field>
            <operation>startsWith</operation>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>notContain</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>notContain</operation>
            <value>負け</value>
        </filters>
        <label>受注予定№</label>
    </listViews>
    <listViews>
        <fullName>View6</fullName>
        <booleanFilter>1 AND  (2 or 3) and (4 or 5) AND 6 AND 7 and 8</booleanFilter>
        <columns>NAME</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>ShohinName__c</columns>
        <columns>YosanKakudo__c</columns>
        <columns>JuchuKakudo__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>010</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>019</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201603</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201504</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>01070050</value>
        </filters>
        <label>受注予定（会田）</label>
    </listViews>
    <listViews>
        <fullName>View9</fullName>
        <booleanFilter>(1 or 2 or 3 ) and 4 and 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>ShodanStatus__c</columns>
        <columns>Series__c</columns>
        <columns>EigyoTantoshaName__c</columns>
        <columns>RegionName__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>ShohinName__c</columns>
        <columns>JishaPrice__c</columns>
        <columns>TaiTorihikiNebikigaku__c</columns>
        <columns>JuchuYoteiTsuki__c</columns>
        <columns>ShukkaYokyuTsuki__c</columns>
        <columns>YosanKakudo__c</columns>
        <columns>JuchuKakudo__c</columns>
        <columns>Biko_Shodan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>負け</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>PR段階</value>
        </filters>
        <filters>
            <field>ShodanStatus__c</field>
            <operation>equals</operation>
            <value>勝ち</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>lessThan</operation>
            <value>201603</value>
        </filters>
        <filters>
            <field>JuchuYoteiTsuki__c</field>
            <operation>greaterThan</operation>
            <value>201504</value>
        </filters>
        <filters>
            <field>EigyoTantoshaCode__c</field>
            <operation>contains</operation>
            <value>27160270</value>
        </filters>
        <label>☆受注予定☆蓮見</label>
    </listViews>
    <nameField>
        <label>受注予定No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>